Convert country code field
