# app/models/Country/methods/delete.py
@@ -3,11 +3,11 @@ from ... import db
 from ... import ClientError
 
 
-def delete_country_query(Country, countrycode):
-    country = Country.query.get(countrycode)
+def delete_country_query(Country, country_code):
+    country = Country.query.get(country_code)
 
     if not country:
-        return ClientError('A country with that countrycode does not exist.')
+        return ClientError('A country with that country_code does not exist.')
 
     db.session.delete(country)
     db.session.commit()    
